# ai-hardware-design-studio

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml
apps/desktop/: index.html  package.json
apps/desktop/src/: App.tsx  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/src/: main.rs  report_service.rs
apps/desktop/src/components/: BottomPanel.tsx  CenterWorkspace.tsx  RightPanel.tsx  Sidebar.tsx  StatusBadge.tsx
docs/: AGENT_ACTIONS.md  ARCHITECTURE.md  DEVELOPMENT_PROGRESS_2026-04-28.md  IR_SCHEMA.md  KICAD_PIPELINE.md  PART_LIBRARY_DESIGN.md  ROADMAP.md  SCHEMATIC_GENERATOR_DESIGN.md
examples/usb_i2s_fpga/: hardware_design_ir.json
scripts/: confirm_change_plan.py  confirm_change_plan_cli.mjs  explain_erc_report.py  explain_erc_report_cli.mjs  export_schematic_svg.mjs  export_schematic_svg.py  generate_kicad_artifacts.py  generate_kicad_artifacts_cli.mjs  generate_schematic_project.py  inspect_project.py  parse_design.py  parse_design_cli.mjs  parse_erc_diagnostics.py  parse_erc_diagnostics_cli.mjs  plan_changes.py  plan_changes_cli.mjs  run_erc.py  run_erc_cli.mjs  run_pipeline.mjs  run_pipeline.py  suggest_erc_fixes.py  suggest_erc_fixes_cli.mjs
tests/: test_change_planner.py  test_confirm_change_plan.py  test_design_request.py  test_erc_diagnostics.py  test_erc_explainer.py  test_erc_fix_suggester.py  test_export_schematic_svg.py  test_generate_kicad_artifacts.py  test_mock_pipeline.py  test_pipeline.py  test_project_inspector.py  test_run_erc.py
(+9 files in other folders)
