[package]
name = "ai-hardware-design-studio"
version = "0.1.0"
description = "AI schematic design agent and deterministic KiCad compiler desktop shell."
authors = ["AI Hardware Design Studio Contributors"]
license = "MIT"
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
